[metadata]
name = rita
version = 0.1.0
author = Alexandre Ribeiro
author_email = engribeiroale@gmail.com
description = Repo template for my own projects
long_description = file: README.md
license = MIT
license_file = LICENSE
long_description_content_type = text/markdown
url = https://github.com/ribeiroale/rita
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = rita
python_requires = >=3.9

[options.packages.find]
where = rita